--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,40 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import url('https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+    --primary-color-body: #060101;
+    --secondary-color: #f66629;
+    --secondary-color-light: #d16f45;
+    --tertiary-color: #120402;
+    --tertiary-color-light: #0d0101;
+    --gold: #f09b00;
+    --quaternary-color: #2a0909;
+    --quinary-color: #430f0f;
+    --white: #fff;
+    --14px: 0.875rem;
+    --16px: 1rem;
+    --18px: 1.125rem;
+    --20px: 1.25rem;
+    --24px: 1.5rem;
+    --32px: 2rem;
+    --36px: 2.25rem;
+    --64px: 5rem;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Anek Latin", sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body{
+    background-color: var(--primary-color-body);
+    color: var(--white);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+hr {
+    border: none;
+    height: 2px;
+    background: linear-gradient(to right, transparent, #483f3e, transparent);
+    width: 100%;
 }
