--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -33,6 +33,8 @@
     text-transform: uppercase;
     width: fit-content;
     margin: 0 auto;
+    z-index: 999;
+    box-shadow: 0px 2px 6px rgb(246, 102, 41);
 
     &:hover{
       background: var(--secondary-color-light);
