--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 50px 0;
-  background: url("../../../public/assets/images/footer.svg") no-repeat center;
+  background: url("../../assets/images/footer.svg") no-repeat center;
   background-size: cover;
 }
 
