--- a/src/sections/welcome-section/WelcomeSection.module.scss
+++ b/src/sections/welcome-section/WelcomeSection.module.scss
@@ -1,5 +1,5 @@
 .welcomeSection {
-  background: url("../../../public/assets/images/welcome-bg.png") no-repeat center;
+  background: url("../../assets/images/welcome-bg.png") no-repeat center;
   background-size: cover;
   padding: 0 0 120px 0;
   position: relative;
