--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,22 @@
 
 :root{
     --primary-color-body: #060101;
-    --secondary-color: #f66629;
+    --secondary-color: #e4571b;
     --secondary-color-light: #d16f45;
     --secondary-color-dark: #4f1800;
+    --secondary-color-dark-2: #110908;
+    --secondary-color-dark-transparent: rgba(17, 9, 8, 0.54);
     --tertiary-color: #120402;
     --tertiary-color-light: #0d0101;
+    --bordo: #2d0808;
+    --bordo-dark: #130a09;
     --gold: #f09b00;
     --gold-light: #ffac23;
     --quaternary-color: #2a0909;
     --quinary-color: #430f0f;
     --senary-color: #2d0808;
     --grey: #987D7A;
+    --grey-light: #D6B7B4;
     --white: #fff;
     --14px: 0.875rem;
     --16px: 1rem;
