--- a/src/components/countdown-timer/CountdownTimer.module.scss
+++ b/src/components/countdown-timer/CountdownTimer.module.scss
@@ -8,7 +8,7 @@
 }
 
 .timeContainer {
-  background: var(--quinary-color);
+  background: linear-gradient(45deg, var(--secondary-color-dark-2), var(--tertiary-color));
   display: flex;
   flex-direction: column;
   padding: 15px 25px;
@@ -21,6 +21,10 @@
   cursor: pointer;
   transition: 0.3s ease-in-out;
 
+  &:last-child{
+    width: 86px;
+  }
+
   &:hover{
     background: var(--tertiary-color);
     border: 1px solid var(--secondary-color);
@@ -30,4 +34,22 @@
     font-weight: bold;
     font-size: var(--32px);
   }
+}
+
+.countdown {
+  display: flex;
+  gap: 10px;
+}
+
+.timeContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--white);
+  border: 1px solid var(--white);
+}
+
+.timeContainer.active {
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
 }
