--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -25,6 +25,49 @@
     }
   }
 
+  &.orange-outlined {
+    display: flex;
+    gap: 10px;
+    background-color: var(--secondary-color-dark-2);
+    color: var(--white);
+    font-size: var(--20px);
+    border-radius: 55px;
+    padding: 20px;
+    width: 100%;
+    font-weight: 700;
+    transition: 0.2s ease-in-out;
+    text-transform: uppercase;
+    margin: 0 auto;
+    z-index: 999;
+    box-shadow: 0px 2px 6px rgb(246, 102, 41);
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  &.orange-full-width {
+    display: flex;
+    gap: 10px;
+    background-color: var(--secondary-color);
+    color: var(--white);
+    font-size: var(--20px);
+    border-radius: 55px;
+    padding: 20px 20px;
+    height: 100%;
+    width: 100%;
+    font-weight: 700;
+    transition: 0.2s ease-in-out;
+    text-transform: uppercase;
+    margin: 0 auto;
+    z-index: 999;
+    box-shadow: 0px 2px 6px rgb(246, 102, 41);
+
+    &:hover {
+      background: var(--secondary-color-light);
+    }
+  }
+
   &.orange {
     display: flex;
     gap: 10px;
@@ -33,10 +76,10 @@
     font-size: var(--20px);
     border-radius: 55px;
     padding: 20px 75px;
+    width: fit-content;
     font-weight: 700;
     transition: 0.2s ease-in-out;
     text-transform: uppercase;
-    width: fit-content;
     margin: 0 auto;
     z-index: 999;
     box-shadow: 0px 2px 6px rgb(246, 102, 41);
@@ -68,19 +111,24 @@
   &.orange-non-centered-small {
     display: flex;
     gap: 10px;
-    background-color: var(--secondary-color);
+    background: linear-gradient(45deg, var(--secondary-color), var(--secondary-color-dark));
     color: var(--white);
-    font-size: var(--14px);
+    font-size: var(--16px);
     border-radius: 55px;
     padding: 15px 20px;
     width: 100%;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
     font-weight: 700;
     transition: 0.2s ease-in-out;
     text-transform: uppercase;
     z-index: 999;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
     &:hover {
-      background: var(--secondary-color-light);
+      opacity: 0.7;
     }
   }
 
