--- a/src/components/page-content/PageContent.module.scss
+++ b/src/components/page-content/PageContent.module.scss
@@ -2,6 +2,14 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  position: relative;
   gap: 70px;
   background: var(--tertiary-color-light);
+}
+
+@media screen and (max-width: 1180px) {
+  .main {
+    gap: 10px;
+  }
+
 }
