--- a/src/sections/welcome-section/WelcomeSection.module.scss
+++ b/src/sections/welcome-section/WelcomeSection.module.scss
@@ -1,7 +1,7 @@
 .welcomeSection {
   background: url("../../../public/welcome-bg.png") no-repeat center;
   background-size: cover;
-  padding: 0 0 120px 0;
+  padding: 120px 0 120px 0;
   position: relative;
 }
 
@@ -48,20 +48,48 @@
     font-size: 5rem;
   }
 
-  p{
+  p {
     margin: 40px 0;
     color: var(--white);
     font-size: var(--20px);
   }
 }
 
-.gunImage{
+.gunImage {
   position: absolute;
   right: 0;
 
 }
 
-.giftImage{
-    position: absolute;
-    left: 5%;
+.giftImage {
+  position: absolute;
+  left: 5%;
+}
+
+@media screen and (max-width: 1028px) {
+  .sectionContent {
+    h1 {
+      font-size: 6rem;
+    }
+
+    h2 {
+      font-size: 4rem;
+    }
+
+    h3 {
+      font-size: 3rem;
+    }
+
+    p {
+      font-size: var(--16px);
+      padding: 0 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px){
+  .gunImage{
+    width: 116px;
+    height: auto;
+  }
 }
