--- a/src/components/countdown-timer/CountdownTimer.module.scss
+++ b/src/components/countdown-timer/CountdownTimer.module.scss
@@ -8,11 +8,11 @@
 }
 
 .timeContainer {
-  background: linear-gradient(45deg, var(--secondary-color-dark-2), var(--tertiary-color));
+  background: linear-gradient(to bottom, var(--secondary-color-dark-2), var(--secondary-color-dark));
   display: flex;
   flex-direction: column;
   padding: 15px 25px;
-  border: 1px solid var(--quinary-color);
+  border: 1px solid var(--secondary-color-dark-2);
   gap: 20px;
   border-radius: 10px;
   text-align: center;
@@ -21,13 +21,18 @@
   cursor: pointer;
   transition: 0.3s ease-in-out;
 
+  &:first-child{
+   background: var(--secondary-color-dark-2);
+    border: 1px solid var(--secondary-color);
+  }
+
   &:last-child{
     width: 86px;
   }
 
   &:hover{
     background: var(--tertiary-color);
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--secondary-color-dark-2);
   }
 
   span{
@@ -39,14 +44,6 @@
 .countdown {
   display: flex;
   gap: 10px;
-}
-
-.timeContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: var(--white);
-  border: 1px solid var(--white);
 }
 
 .timeContainer.active {
