--- a/src/components/slider-item/SliderItem.module.scss
+++ b/src/components/slider-item/SliderItem.module.scss
@@ -1,36 +1,50 @@
-.slider {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
+.sliderContainer {
   position: relative;
+  width: 100%;
+  overflow: hidden;
+  touch-action: pan-x;
   z-index: 999;
+  display: none;
 }
 
-.sliderTrack {
+.slider {
   display: flex;
   transition: transform 0.3s ease-in-out;
-  justify-content: center; /* Center-align the items */
 }
+
 .slide {
-  flex: 0 0 auto;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pagination {
   display: flex;
   justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .dot {
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
   border-radius: 50%;
-  background: var(--secondary-color);
-  opacity: 0.5;
-  transition: opacity 0.3s ease-in-out;
+  background-color: #2f0606;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.dot.active {
-  opacity: 1;
+.dot:hover {
+  background-color: #e4571b;
+}
+
+.activeDot {
+  background-color: #e4571b;
+}
+
+@media screen and (max-width: 1028px) {
+  .sliderContainer{
+    display: block;
+  }
 }
