--- a/src/sections/latest-videos/LatestVideos.module.scss
+++ b/src/sections/latest-videos/LatestVideos.module.scss
@@ -25,3 +25,11 @@
   gap: 30px;
   grid-template-columns: repeat(4, 1fr);
 }
+
+@media screen and (max-width: 1028px) {
+  .latestVideosContent {
+    gap: 15px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+}
