responsive design for main page

--- a/src/components/quick-link-item/QuickLinkItem.module.scss
+++ b/src/components/quick-link-item/QuickLinkItem.module.scss
@@ -9,6 +9,7 @@
   object-fit: contain;
   color: var(--gold);
   border-radius: 20px;
+  padding: 0 60px;
   border: 1px solid var(--secondary-color-dark);
   background-size: contain;
   font-size: var(--36px);
@@ -25,4 +26,22 @@
     border: 1px solid var(--secondary-color);
     box-shadow: 0 0 10px var(--secondary-color);
   }
+}
+
+@media screen and (max-width: 768px) {
+  .quickLinkItem {
+    height: 200px;
+    padding: 0 10px;
+    font-size: var(--24px);
+  }
+
+}
+
+@media screen and (max-width: 476px) {
+  .quickLinkItem {
+    height: fit-content;
+    padding: 40px 10px;
+    font-size: var(--16px);
+  }
+
 }
