--- a/src/components/player-frame/PlayerFrame.module.scss
+++ b/src/components/player-frame/PlayerFrame.module.scss
@@ -103,3 +103,9 @@
   height: 110px;
   width: 110px;
 }
+
+@media screen and (max-width: 768px) {
+  .firstPlace, .secondPlace, .defaultPlace {
+    height: 454px;
+  }
+}
