--- a/src/components/slider-item/SliderItem.module.scss
+++ b/src/components/slider-item/SliderItem.module.scss
@@ -9,6 +9,7 @@
 
 .slider {
   display: flex;
+  gap: 10px;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -17,6 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 9px;
 }
 
 .pagination {
