--- a/src/sections/leaderboards/LeaderBoards.module.scss
+++ b/src/sections/leaderboards/LeaderBoards.module.scss
@@ -136,6 +136,7 @@
   .leaderBoardsContent {
     flex-direction: column;
     padding: 20px;
+    gap: 20px;
     align-content: center;
     text-align: center;
   }
