--- a/src/components/quick-link-item/QuickLinkItem.module.scss
+++ b/src/components/quick-link-item/QuickLinkItem.module.scss
@@ -40,6 +40,7 @@
 @media screen and (max-width: 476px) {
   .quickLinkItem {
     height: fit-content;
+    width: 100%;
     padding: 40px 10px;
     font-size: var(--16px);
   }
