--- a/src/sections/quick-links/QuickLinks.module.scss
+++ b/src/sections/quick-links/QuickLinks.module.scss
@@ -39,7 +39,14 @@
 @media screen and (max-width: 768px) {
   .quickLinksContent{
     gap: 15px;
+    padding: 0;
+    margin: 0;
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .quickLinks{
+    gap: 20px;
+    padding: 15px;
   }
 }
 
